--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,10 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    
+    // "noEmit": true,  <-- Remove this line or set it to false
+    "emitDeclarationOnly": true  // Keep emitDeclarationOnly if you need declaration files
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
